--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "china-region-data"
-version = "0.1.3"
+version = "0.1.4"
 description = "中国行政区域数据"
 authors = ["abersheeran <me@abersheeran.com>"]
 readme = "README.md"
@@ -19,6 +19,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.6"
+cached_property = "^1.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
