--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,34 @@
 [tool.poetry]
-name = "china-region-data"
-version = "0.2.0"
-description = "中国行政区域数据"
 authors = ["abersheeran <me@abersheeran.com>"]
-readme = "README.md"
+description = "中国行政区域数据"
 license = "MIT"
+name = "china-region-data"
+readme = "README.md"
+version = "2020.10"
 
+classifiers = [
+  "Programming Language :: Python :: 3",
+]
+documentation = "https://github.com/abersheeran/china-region-data"
 homepage = "https://github.com/abersheeran/china-region-data"
 repository = "https://github.com/abersheeran/china-region-data"
-documentation = "https://github.com/abersheeran/china-region-data"
-classifiers=[
-    "Programming Language :: Python :: 3",
-]
 
 packages = [
-    { include = "china_region_data" },
+  {include = "china_region_data"},
 ]
 
 [tool.poetry.dependencies]
 python = "^3.6"
-cached_property = "^1.5.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
-black = {version = "^19.10b0", allow-prereleases = true}
-mypy = "^0.761"
-requests = "^2.22.0"
 beautifulsoup4 = "^4.8.2"
+black = {version = "*", allow-prereleases = true}
+flake8 = "*"
+mypy = "*"
+pytest = "^5.2"
+pytest-cov = "^2.10.1"
+requests = "^2.22.0"
 
 [build-system]
-requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+requires = ["poetry>=0.12"]
